--- a/public/sample.html
+++ b/public/sample.html
@@ -11,7 +11,6 @@
 
   <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 
-  <script src="js/sample.js"></script>
   <script src="js/jquery.hashtag.js"></script>
 
 </head>
@@ -23,61 +22,15 @@
     <div>
       <h1>背景色変更</h1>
       <div class="container">
-        <textarea cols="100" rows="5" id="textarea">私は宇宙人です。20光年かけて地球にやって来ました。宇宙には様々な宇宙人が住んでいます。</textarea>
+        <textarea cols="100" rows="5" id="textarea1">私は宇宙人です。20光年かけて地球にやって来ました。宇宙には様々な宇宙人が住んでいます。</textarea>
       </div>
     </div>
-    <!-- <div id="editor" contenteditable>私は宇宙人です。20光年かけて地球にやって来ました。宇宙には様々な宇宙人が住んでいます。</div> -->
-    <input type="button" value="デザイン" class="button" onclick="design()">
-
-
-
   </form>
 
   <script>
-    // var str1 = document.getElementById('editor').value;
-    // var editor = document.getElementById('editor');
-    // var selectedStr;
-    // var start;
-    // var end;
-    // var range
-
-
-    window.addEventListener('mouseup', e => {
-      if (window.getSelection) {  //selectionオブジェクト取得
-        selection = window.getSelection()
-        selectedStr = selection.toString();  //文章取得
-        range = selection.getRangeAt(0);
-        start = range.startOffset;
-        end = range.endOffset;
-
-        if (selectedStr !== '' && selectedStr !== '\n') {  //文章チェック
-          // design(textarea.selectionStart, textarea.selectionEnd, selectedStr)
-          console.log(start);
-          console.log(end);
-        }
-      }
-    });
-
-
-    // function design(start, end, text) {
-    //   document.execCommand('foreColor', false, '#e51c23');
-    // }
-
-    // function chgColor() {
-    //   var newNode = document.createElement('span');
-    //   console.log(sel);
-    //   console.log(newNode);
-    //   newNode.setAttribute('style', 'background-color: blue;'); //範囲選択箇所の背景を青にする
-    //   newNode.innerHTML = sel.toString();
-    //   range.deleteContents();    // 範囲選択箇所を一旦削除
-    //   range.insertNode(newNode); // 範囲選択箇所の先頭から、修飾したspanを挿入
-    // }
-
     jQuery(function () {
       jQuery("textarea").hashtag();
     });
-  </script>
-
   </script>
 
 </body>
