--- a/public/sample.html
+++ b/public/sample.html
@@ -8,16 +8,32 @@
 
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/hashtag.css">
+  <link rel="stylesheet" href="css/backbtn.css">
+  <link rel="stylesheet" href="css/contextmenu.css">
 
   <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 
-  <script src="js/jquery.hashtag.js"></script>
+  <!-- <script src="js/hashtag.js"></script> -->
+  <script src="js/backbtn.js"></script>
+
+  <!-- <script type="text/javascript">
+      function disp() {
+        // 「OK」時の処理開始 ＋ 確認ダイアログの表示
+        if (window.confirm('デザインを削除してもよろしいですか？')) {
+        }
+        // 「OK」時の処理終了
+        // 「キャンセル」時の処理開始
+        else {
+          window.alert('キャンセルされました'); 
+        }
+        // 「キャンセル」時の処理終了
+      }
+  </script> -->
+
 
 </head>
 
-<body>
-
-
+<body onContextmenu="return false;">
   <form name="form1">
     <div>
       <h1>背景色変更</h1>
@@ -26,6 +42,29 @@
       </div>
     </div>
   </form>
+
+  <div id="contextmenu">
+    <ul>
+      <button type="button" onclick="design()">デザイン</button>
+    </ul>
+  </div>
+
+  <script>
+    window.onload = function () {
+      document.getElementById("textarea1").addEventListener('contextmenu', function (e) {
+        //マウスの位置をstyleへ設定（左上の開始位置を指定）
+        document.getElementById('contextmenu').style.left = e.pageX + "px";
+        document.getElementById('contextmenu').style.top = e.pageY + "px";
+        //メニューをblockで表示させる
+        document.getElementById('contextmenu').style.display = "block";
+      });
+      document.body.addEventListener('click', function (e) {
+        //メニューをnoneで非表示にさせる
+        document.getElementById('contextmenu').style.display = "none";
+      });
+    }
+  </script>
+
 
   <script>
     jQuery(function () {
