--- a/public/sample2.html
+++ b/public/sample2.html
@@ -1,43 +1,43 @@
-<!DOCTYPE html>
 <html>
-
-<head>
-    <script type="text/javascript">
-        function returnWindow() {
-            // 親ウィンドウの存在チェック
-            if (!window.opener || window.opener.closed) {
-                window.alert('親ウィンドウがありません。');
-                return false;
-            }
-            // 子ウィンドから親ウィンドウへ値を渡す
-            window.opener.document.getElementById("yasai").innerHTML = document.getElementById("yasai").value;
-            window.opener.document.getElementById("kudamono").innerHTML = document.getElementById("kudamono").value;
-        }
-    </script>
+  <head>
     <title></title>
-</head>
+    <script type="text/javascript" src="http://www.google.com/jsapi"></script>
+    <script type="text/javascript">
+      google.load("jquery", "1.3.2");
+    </script>
+    
+    <script type="text/javascript">
+      $( function() {
+        var button = $("#copy");
+        $(document).mousedown(function () {
+          if(document.selection) { // IE
+            var range = document.selection.createRange();
+            selected_value = range.text;
+          } else { // IE 以外
+            var org = document.getElementById("org");
+            var start = org.selectionStart;
+            var end = org.selectionEnd;
+            var selected_value = org.value.substring(start, end);
+          }
 
-<body>
-    <b>子ウィンドウ１</b>
-    <p>野菜：<input type="text" id="yasai" value="ナス"></p>
-    <p>果物：<input type="text" id="kudamono" value="ミカン"></p>
- 
-    <!-- <fieldset>
-        <legend>[野菜]</legend>
-        <label><input type="radio" name="vegetable" value="kyuu">胡瓜</label>
-        <label><input type="radio" name="vegetable" value="nasu">茄子</label>
-        <label><input type="radio" name="vegetable" value="kabo">南瓜</label><br>
-    </fieldset>
-    <fieldset>
-        <legend>[果物]</legend>
-        <label><input type="radio" name="fruit" value="suik">西瓜</label>
-        <label><input type="radio" name="fruit" value="saku">桜桃</label>
-        <label><input type="radio" name="fruit" value="momo">白桃</label><br>
-    </fieldset> -->
-    <p><a href="javascript:void(0);" onclick="returnWindow()">親ウィンドウに値を渡す</a></p>
-
-
-
-</body>
-
+          $("#cp").val(selected_value);
+        });
+      })
+      
+      $(document).ready(function(){
+          $(document).bind("contextmenu",function(event){
+      return false;
+      });
+});
+    </script>
+  </head>
+  <body>
+    <p>コピー元:</p>
+    <textarea id="org"></textarea>
+    <input type="button" id="copy" value="copy">
+    <br />
+    <br />
+    <p>コピー先:</p>
+    <textarea id="cp"></textarea>
+  </body>
 </html>
