--- a/public/sample.html
+++ b/public/sample.html
@@ -45,6 +45,12 @@
 
   <div id="contextmenu">
     <ul>
+      <!-- <h3>動作の設定をしてください</h3>
+      <label><input type="radio" name="radios" value="">Neopolitan</label>
+      <label><input type="radio" name="radios" value="">Mint Choco Chip</label>
+      <label><input type="radio" name="radios" value="">Blue Moon</label>
+      <label><input type="radio" name="radios" value="">All the Ice Cream</label>
+       -->
       <button type="button" onclick="design()">デザイン</button>
     </ul>
   </div>
