--- a/public/index.html
+++ b/public/index.html
@@ -10,28 +10,29 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/hashtag.css">
+    <link rel="stylesheet" href="css/backbtn.css">
+    <link rel="stylesheet" href="css/contextmenu.css">
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-    <script src='python/libqi-js/libs/qimessaging/1.0/qimessaging.js'></script>
+    <script src="python/libqi-js/libs/qimessaging/1.0/qimessaging.js"></script>
 
 
     <script src="js/mv.js"></script>
-    <script src="js/play.js"></script>
-    <script src="js/addform.js"></script>
-    <script src="js/jquery.hashtag.js"></script>
-    <script src="js/windowcmd.js"></script>
+    <script src="js/backbtn.js"></script>
+    <script src="js/sort.js"></script>
+
     <script type="text/javascript" src="/socket.io/socket.io.js"></script>
     <!-- javascriptのファイル名 -->
 
 </head>
 
-<body>
+<body onContextmenu="return false;">
     <!----- header----->
     <!-- <header>プレゼン動作のデザイン</header> -->
     <!----- /header ----->
 
     <!----- main ----->
     <!-- <h1>タイトル</h1> -->
-    
+
     <section>
 
         <div class="g-slide">
@@ -44,25 +45,61 @@
         <div class="mv">
             <video src="video.mp4" controls autobuffer></video>
         </div>
-
-        <div class="none_float">
-            <button type="button" onclick="getMdTime()">再生時間</button>
-            <button type="button" onclick="goZero()">最初から再生</button>
-        </div>
     </section>
 
     <section>
-        <div class="container">
-            <textarea cols="100" rows="5" id="textarea1"></textarea>
-        </div>
+        <form name="form1">
+            <div>
+                <div class="container">
+                    <textarea cols="100" rows="5" id="textarea1">私は宇宙人です。20光年かけて地球にやって来ました。宇宙には様々な宇宙人が住んでいます。</textarea>
+                </div>
+            </div>
+        </form>
 
+        <div id="contextmenu">
+            <h2>意図を選択してください</h2>
+            <div>
+                <input type="radio" id="intention1" name="intention" value="int1" checked>
+                <label for="intention1">注意喚起</label>
 
-        <!-- <input type="button" value="追加" onclick="addBtn()">
-        <input type="button" value="デザイン追加" onclick="addForm_designBtn()">
+                <input type="radio" id="intention2" name="intention" value="int2">
+                <label for="intention2">注意誘導</label>
 
-        <button type="button" href="javascript:void(0);"
-            onclick="openWindow1('subWindow.html', 'child_window1')">ページリンク</button> -->
-        <!-- <p><a href="javascript:void(0);" onclick="openWindow1('subWindow.html', 'child_window1')">子ウィンドウ１を開く</a></p> -->
+                <input type="radio" id="intention3" name="intention" value="int3">
+                <label for="intention3">注意喚起＋誘導</label>
+            </div>
+            <h2>動作を選択してください</h2>
+            <div>
+                <input type="radio" id="motion1" name="motion" value="motion1" checked>
+                <label for="motion1">指差し</label>
+
+                <input type="radio" id="motion2" name="motion" value="motion2">
+                <label for="motion2">視線</label>
+
+                <input type="radio" id="motion3" name="motion" value="motion3">
+                <label for="motion3">指差し＋視線</label>
+                <ul>
+                    <button type="button" onclick="design()">デザイン</button>
+                    <button type="button" onclick="design_cancel()">キャンセル</button>
+                </ul>
+            </div>
+
+            <script>
+                window.onload = function () {
+                    document.getElementById("textarea1").addEventListener('contextmenu', function (e) {
+                        //マウスの位置をstyleへ設定（左上の開始位置を指定）
+                        document.getElementById('contextmenu').style.left = e.pageX + "px";
+                        document.getElementById('contextmenu').style.top = e.pageY + "px";
+                        //メニューをblockで表示させる
+                        document.getElementById('contextmenu').style.display = "block";
+                    });
+                }
+            </script>
+    </section>
+    <button type="button" id="1" onclick="save()">保存</button>
+    <button type="button" onclick="play()">再生</button>
+    <section>
+
     </section>
 
     <script>
@@ -78,6 +115,18 @@
             pythonPath: 'C:/Python27/python.exe',
             pythonOptions: ['-u'],
         };
+
+        function save() {
+            console.log("save");
+            deform_class()
+            data = tojson();
+            socket.emit("jsonSave", data);
+        }
+        function play() {
+            console.log("play");
+            socket.emit("moveNao");
+        }
+
 
         // function textSave(target) {
         //     var sbtnid = target.id;
