--- a/public/slide2.html
+++ b/public/slide2.html
@@ -98,7 +98,7 @@
     <button type="button" id="1" onclick="save()">保存</button>
     <button type="button" onclick="play()">再生</button>
     <section>
-        <button onclick="location.href='slide2.html'">スライド２</button>
+        <button onclick="location.href='index.html'">スライド１</button>
         <button onclick="location.href='slide3.html'">スライド３</button>
     </section>
 
@@ -109,7 +109,7 @@
     </script>
 
     <script type="text/javascript">
-        const mode = "slide1";
+        const mode = "slide2";
         var socket = io.connect();
         var options = {
             mode: 'text', // textもしくはjson
@@ -117,21 +117,10 @@
             pythonOptions: ['-u'],
         };
 
-        socket.on('checkmode', () => {
-            socket.emit("returnmode", mode);
-        })
-
-        socket.on('senddata', (data, jsondata) => {
-            let element = document.getElementById('textarea1');
-            console.log(data);
-            element.value = data;
-            loaddata(jsondata);
-        })
-
         function save() {
             console.log("save");
             deform_class()
-            let data = tojson();
+            data = tojson();
             socket.emit("jsonSave", data);
         }
         function play() {
