--- a/public/index.html
+++ b/public/index.html
@@ -34,12 +34,8 @@
     <!-- <h1>タイトル</h1> -->
 
     <section>
-
-        <div class="g-slide">
-            <iframe
-                src="https://docs.google.com/presentation/d/e/2PACX-1vSkiPQJM-nPoMSIwRNDir4CtyYk59Bz71jLqDud-JOzHDCLjKWmIwShWodrNoDT5akzJXvELXnz0Yqr/embed?start=false&loop=true&delayms=3000"
-                frameborder="0" allowfullscreen="false" mozallowfullscreen="false"
-                webkitallowfullscreen="falseS"></iframe>
+        <div class="slide">
+            <img src="./slide/slide1.jpg" title="slide1">
         </div>
 
         <div class="mv">
@@ -55,6 +51,17 @@
                 </div>
             </div>
         </form>
+
+        <button type="button" id="1" onclick="save()">保存</button>
+        <button type="button" onclick="play()">再生</button>
+        <section>
+            <button onclick="location.href='slide2.html'">スライド２</button>
+            <button onclick="location.href='slide3.html'">スライド３</button>
+            <button onclick="location.href='slide4.html'">スライド４</button>
+            <button onclick="location.href='slide5.html'">スライド５</button>
+        </section>
+        <ul class="list">
+        </ul>
 
         <div id="contextmenu">
             <h2>意図を選択してください</h2>
@@ -111,25 +118,24 @@
                 window.onload = function () {
                     document.getElementById("textarea1").addEventListener('contextmenu', function (e) {
                         //マウスの位置をstyleへ設定（左上の開始位置を指定）
-                        document.getElementById('contextmenu').style.left = e.pageX + "px";
-                        document.getElementById('contextmenu').style.top = e.pageY + "px";
+                        let px = e.pageX;
+                        let py = e.pageY;
+                        if (px > 1020) {
+                            px = 1020;
+                        }
+                        if (py > 400) {
+                            py = 400;
+                        }
+                        document.getElementById('contextmenu').style.left = px + "px";
+                        document.getElementById('contextmenu').style.top = py + "px";
+                        console.log(e.pageX);
+                        console.log(e.pageY);
                         //メニューをblockで表示させる
                         document.getElementById('contextmenu').style.display = "block";
                     });
                 }
             </script>
     </section>
-    <button type="button" id="1" onclick="save()">保存</button>
-    <button type="button" onclick="play()">再生</button>
-    <section>
-        <button onclick="location.href='slide2.html'">スライド２</button>
-        <button onclick="location.href='slide3.html'">スライド３</button>
-        <button onclick="location.href='slide4.html'">スライド４</button>
-        <button onclick="location.href='slide5.html'">スライド５</button>
-    </section>
-
-    <ul class="list">
-    </ul>
 
     <script>
         jQuery(function () {
