--- a/public/slide5.html
+++ b/public/slide5.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/hashtag.css">
     <link rel="stylesheet" href="css/backbtn.css">
+    <link rel="stylesheet" href="css/list.css">
     <link rel="stylesheet" href="css/contextmenu.css">
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="python/libqi-js/libs/qimessaging/1.0/qimessaging.js"></script>
@@ -55,10 +56,10 @@
         <button type="button" id="1" onclick="save()">保存</button>
         <button type="button" onclick="play()">再生</button>
         <section>
+            <button onclick="location.href='index.html'">スライド１</button>
             <button onclick="location.href='slide2.html'">スライド２</button>
             <button onclick="location.href='slide3.html'">スライド３</button>
             <button onclick="location.href='slide4.html'">スライド４</button>
-            <button onclick="location.href='slide5.html'">スライド５</button>
         </section>
         <ul class="list">
         </ul>
