--- a/public/slide5.html
+++ b/public/slide5.html
@@ -108,7 +108,7 @@
                 <input type="radio" id="motion5" name="motion" value="motion5">
                 <label for="motion5">奥指さし</label>　
                 <input type="radio" id="motion11" name="motion" value="motion11">
-                <label for="motion11">動作強調</label>　
+                <label for="motion11">強調動作</label>　
                 <ul>
                     <button type="button" onclick="design()">デザイン</button>
                     <button type="button" onclick="design_cancel()">キャンセル</button>
